<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/from_studiante"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >

    <TextView
        android:text="@string/dialog_titulo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/dialog_cc_estudiante"
        android:hint="@string/dialog_cc_estudiante"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/dialog_name_estudiante"
        android:hint="@string/dialog_name_estudiante"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/dialog_Apell_estudiante"
        android:hint="@string/dialog_Apell_estudiante"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/dialog_cel_estudiante"
        android:hint="@string/dialog_cel_estudiante"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <Button
        android:id="@+id/dialog_boton_estudiante"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_boton_estudiante"
        android:backgroundTint="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>