<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentoTiempo"
    android:background="@drawable/from_fragmentos">

    <TextView
        android:id="@+id/tiempo_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tiempo_titulo"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/frag_tiempo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/frag_tiempo_label"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiempo_titulo" />

    <TextView
        android:id="@+id/frag_tiempo_value"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/frag_tiempo_value"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:background="@drawable/from_studiante"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_tiempo_label" />

    <Button
        android:id="@+id/frag_tiempo_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/from_fragmentos"
        android:text="@string/frag_tiempo_button"
        android:textAllCaps="false"
        android:backgroundTint="@null"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_tiempo_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>