<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/from_home"
    tools:context=".FragmentoHome">


    <TextView
        android:id="@+id/home_titulo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/home_titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/home_container"
        android:layout_width="350dp"
        android:layout_height="488dp"
        android:layout_margin="20dp"
        android:background="@drawable/from_studiante"
        app:layout_constraintBottom_toTopOf="@+id/home_boton_tiempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_titulo" />

    <Button
        android:id="@+id/home_boton_tiempo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:backgroundTint="@null"
        android:layout_marginBottom="76dp"
        android:text="@string/home_boton_tiempo"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_boton_imagen"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_boton_imagen"
        android:layout_width="150dp"
        android:backgroundTint="@null"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="76dp"
        android:text="@string/home_boton_imagen"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/home_boton_volver"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:backgroundTint="@null"
        android:layout_marginStart="10dp"
        android:layout_marginTop="660dp"
        android:padding="0dp"
        android:text="@string/home_boton_volver"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>