<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="10dp"
    android:background="@drawable/from_studiante"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/icono_estudiante"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:src="@drawable/icono_estudiant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_cc_estudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:text="@string/label_cc_estudiante"
        app:layout_constraintStart_toEndOf="@+id/icono_estudiante"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/cc_estudiante"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/borrar_estudiante"
        app:layout_constraintStart_toEndOf="@+id/label_cc_estudiante"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="0000000000"
        />

    <TextView
        android:id="@+id/label_nombre_estudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_nombre_estudiante"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icono_estudiante"
        app:layout_constraintTop_toBottomOf="@+id/label_cc_estudiante" />

    <TextView
        android:id="@+id/nombre_estudiante"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/borrar_estudiante"
        app:layout_constraintStart_toEndOf="@+id/label_nombre_estudiante"
        app:layout_constraintTop_toBottomOf="@+id/cc_estudiante"
        tools:ignore="MissingConstraints"
        tools:text="Maria Maria"
        />

    <TextView
        android:id="@+id/label_Apellido_Estudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_Apellido_Estudiante"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icono_estudiante"
        app:layout_constraintTop_toBottomOf="@+id/label_nombre_estudiante" />

    <TextView
        android:id="@+id/Apellido_Estudiante"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/borrar_estudiante"
        app:layout_constraintStart_toEndOf="@+id/label_Apellido_Estudiante"
        app:layout_constraintTop_toBottomOf="@+id/nombre_estudiante"
        tools:ignore="MissingConstraints"
        tools:text="Perez Perez"
        />

    <TextView
        android:id="@+id/label_Celular_Estudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_Celular_Estudiante"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icono_estudiante"
        app:layout_constraintTop_toBottomOf="@+id/label_Apellido_Estudiante" />

    <TextView
        android:id="@+id/Celular_Estudiante"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/borrar_estudiante"
        app:layout_constraintStart_toEndOf="@+id/label_Celular_Estudiante"
        app:layout_constraintTop_toBottomOf="@+id/Apellido_Estudiante"
        tools:ignore="MissingConstraints"
        tools:text="3014561313"
        />

    <ImageView
        android:id="@+id/borrar_estudiante"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/icono_borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>